--- a/Servisur_Django/Base_Datos/templates/base_datos/base.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/base.html
@@ -8,6 +8,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="{% static 'img/logo_servisur1.png' %}">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
       rel="stylesheet"
