--- a/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
@@ -163,9 +163,10 @@
             </div>
 
             <div class="mb-2">
-              <label for="id_dispositivo-Observaciones">Observaciones</label>
-              <textarea id="id_dispositivo-Observaciones" name="dispositivo-Observaciones" class="form-control" rows="3" placeholder="Notas adicionales sobre el equipo o el cliente"></textarea>
+              <label for="id_pedido-Observaciones">Observaciones</label>
+              <textarea id="id_pedido-Observaciones" name="pedido-Observaciones" class="form-control" rows="3" placeholder="Notas adicionales sobre la orden (Accesorios, fallas específicas, etc.)"></textarea>
             </div>
+
           </div>
         </div>
 
