Perfiles de usuario parte 1
Se Creo la funcion de los perfiles de usuario, dependiendo del grupo donde este asignado el usuario puede o no puede acceder a funciones del programa.

--- a/Servisur_Django/Base_Datos/templates/base_datos/main.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/main.html
@@ -75,10 +75,11 @@ trabajo - Servisur{% endblock %} {% block content %}
           </div>
 
           <div class="text-end">
-            <small class="text-muted d-block">Usuario</small>
-            <strong class="fs-6">{{ usuario_activo }}</strong>
-            <small class="text-muted small d-block">Sesión actual</small>
+            <small class="text-muted d-block">Sesión actual</small>
+            <strong class="fs-6">{{ grupo_actual }}</strong>
+            <small class="text-muted d-block">{{ usuario_activo }}</small>
           </div>
+
         </div>
       </div>
     </div>
