--- a/Servisur_Django/Base_Datos/templates/base_datos/base.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/base.html
@@ -15,8 +15,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'css/panel.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/alertas.css' %}">
   </head>
-  <body>
+  <body> 
+    
+    {% if messages %}
+    {% for message in messages %}
+    <div id="alertBox" class="custom-alert" data-message="{{ message|escapejs }}" data-type="{{ message.tags }}">
+    </div>
+    {% endfor %}
+    {% endif %}
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg header-custom px-4">
       <a class="navbar-brand d-flex align-items-center gap-3" href="/">
@@ -58,5 +67,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/panel.js' %}"></script>
+    <script src="{% static 'js/alertas.js' %}"></script>
+    
   </body>
 </html>
