Nueva ventana de gestión de usuarios

--- a/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/Registrar_reparacion.html
@@ -56,21 +56,21 @@
         <!-- Nombre -->
         <div class="mb-3">
           <label for="id_cliente-Nombre">Nombre*</label>
-          <input type="text" id="id_cliente-Nombre" name="Nombre" class="form-control" required />
+          <input type="text" id="id_cliente-Nombre" name="Nombre" class="form-control" required placeholder="Ej: Juan" />
           <div id="error-nombre" class="invalid-feedback" style="display: none;"></div>
         </div>
         
         <!-- Apellido -->
         <div class="mb-3">
           <label for="id_cliente-Apellido">Apellido</label>
-          <input type="text" id="id_cliente-Apellido" name="Apellido" class="form-control" />
+          <input type="text" id="id_cliente-Apellido" name="Apellido" class="form-control" placeholder="Ej: Pérez"  />
           <div id="error-apellido" class="invalid-feedback" style="display: none;"></div>
         </div>
         
         <!-- Teléfono -->
         <div class="mb-3">
           <label for="id_cliente-Numero_telefono">Teléfono</label>
-          <input type="tel" id="id_cliente-Numero_telefono" name="Numero_telefono" class="form-control" />
+          <input type="tel" id="id_cliente-Numero_telefono" name="Numero_telefono" class="form-control" placeholder="Ej: +56 9 1234 5678" />
           <div id="error-telefono" class="invalid-feedback" style="display: none;"></div>
         </div>
       </div>
