--- a/Servisur_Django/Base_Datos/templates/base_datos/base.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/base.html
@@ -48,9 +48,9 @@
           >Registrar</a
         >
         <a
-          href="{% url 'consultar_historial' %}"
+          href="{% url 'gestionar_cuentas' %}"
           class="nav-link medium text-secondary"
-          >Historial</a
+          >Cuenta</a
         >
 
         <a href="{% url 'logout' %}" class="btn-logout" title="Cerrar sesión">
