--- a/Servisur_Django/Base_Datos/templates/base_datos/main.html
+++ b/Servisur_Django/Base_Datos/templates/base_datos/main.html
@@ -77,8 +77,9 @@ trabajo - Servisur{% endblock %} {% block content %}
           <div class="text-end">
             <small class="text-muted d-block">Sesión actual</small>
             <strong class="fs-6">{{ grupo_actual }}</strong>
-            <small class="text-muted d-block">{{ usuario_activo }}</small>
+            <small class="text-muted d-block">{{ request.user.username }}</small>
           </div>
+
 
         </div>
       </div>
